Updated to PaperMC 1.20.4